# cargoe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  VERSION
.github/workflows/: ci.yml
examples/: basic_usage.md
src/: main.rs  manifest.rs  utils.rs
src/commands/: badges.rs  categories.rs  exclude.rs  fmt.rs  get.rs  include.rs  info.rs  init.rs  keywords.rs  metadata.rs  mod.rs  set.rs  validate.rs
tests/: integration_test.rs  migration_test.rs
