bin = [
    { name = "cargoe", path = "src/main.rs" },
]

[package]
name = "cargoe"
version = "0.1.8"
edition = "2021"
rust-version = "1.70"
authors = [
    "Hadi Cahyadi <cumulus13@gmail.com>",
]
license = "MIT OR Apache-2.0"
description = "Advanced Cargo.toml management CLI tool"
readme = "README.md"
homepage = "https://github.com/cumulus13/cargoe"
repository = "https://github.com/cumulus13/cargoe"
documentation = "https://docs.rs/cargoe"
keywords = [
    "cargo",
    "toml",
    "cli",
    "package-manager",
    "development-tools",
]
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
]
exclude = [
    ".github/",
    "tests/fixtures/",
    "*.sh",
    "cargoe.sublime-project",
    "cargoe.sublime-workspace",
    "cargoe.exe",
    "target/",
    "build.bat",
    ".pt/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[dependencies]
anyhow = "1.0"
toml_edit = "0.22"
serde_json = "1.0"
colored = "2.1"
dialoguer = "0.11"
once_cell = "1.19"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
    "cargo",
    "wrap_help",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
